[tool.poetry]
name           = "project scotch"
version        = "1.0.0"
description    = "A chess analytics tool that compares user-submitted games to a database of GM games, helping users learn stronger continuations by studying closest matches."
authors        = ["James Parkington <pongs.acreage.0o@icloud.com>"]
readme         = "README.md"

[tool.poetry.dependencies]
python         = "^3.11"
numpy          = "^1.24.3"
pandas         = "^2.0.1"
pyarrow        = "^12.0.0"
chess          = "^1.9.4"
alive-progress = "^3.1.2"

[tool.poetry.dev-dependencies]
cython         = "^0.29.34"

[build-system]
requires       = ["poetry-core"]
build-backend  = "poetry.core.masonry.api"